# cpp-starter-template

./: .clang-tidy  .gitattributes  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  iwyu.imp
.circleci/: Dockerfile  config.yml
.github/actions/install-clang/: action.yml
.github/actions/install-gcc/: action.yml
.github/actions/install-iwyu/: action.yml
.github/actions/setup-conan/: action.yml
.github/workflows/: aarch64.yml  ci.yml  main.yml  sanitizers.yml  static-analysis.yml
ci/: Dockerfile  circle.sh  travis.sh
ci/conan/: aarch64-linux-hardened  clang-aarch64-linux-hardened  clang-amd64-linux-asan-leak-undefined  clang-amd64-linux-hardened  clang-amd64-linux-static-analysis  clang-amd64-windows-hardened  clang-asan-leak-undefined  clang-libcxx-aarch64-linux-hardened  clang-libcxx-amd64-linux-hardened  clang-libstdcxx-aarch64-linux-hardened  clang-libstdcxx-amd64-linux-asan-leak-undefined  clang-libstdcxx-amd64-linux-hardened  clang-libstdcxx-amd64-linux-static-analysis  gcc-aarch64-linux-hardened  gcc-amd64-linux-hardened  gcc-amd64-linux-static-analysis  gcc-amd64-linux-tsan  gcc-tsan  linux-hardened  msvc-amd64-windows-analyze  msvc-amd64-windows-asan  msvc-amd64-windows-hardened  msvc-analyze  msvc-asan  msvc-hardened  static-analysis
cmake/: clang-format.cmake  clang-tidy.cmake  cppcheck.cmake  dependencies.cmake  iwyu.cmake  project-options.cmake
conan/: aarch64-clang-17  aarch64-gcc-12  clang-18-aarch64-linux  gcc-14-aarch64-linux  gcc-15-aarch64-linux
conan/opt/: aarch64-linux-hardening  arch-amd64-v3  common-linux-hardening
scripts/: build.sh
source/: CMakeLists.txt
source/include/: main.h
source/src/: main.cpp
source/test/: main.t.cpp
src/: CMakeLists.txt
src/cst/: CMakeLists.txt
src/cst/src/: cst.m.cpp
src/cst/test/: cst.t.cpp
